Pagination and other stuff

--- a/HospitalScheduling/HospitalScheduling/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -40,7 +40,7 @@
                 <button type="submit" class="btn btn-success">Save</button>
             </form>
             <br />
-            @Html.Partial("_StatusMessage", Model.StatusMessage)
+            @await Html.PartialAsync("_StatusMessage", Model.StatusMessage)
             <br />
         </div>
     </div>
