--- a/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Create.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Create.cshtml
@@ -31,7 +31,7 @@
                             <label style="margin-top:10px">: </label>
                         </td>
                         <td>
-                            <select asp-for="DoctorID" class="form-control" asp-items="ViewBag.DoctorID" style="text-align:center;width:30em;"></select>
+                            <select asp-for="DoctorID" class="form-control" asp-items="ViewBag.DoctorID" style="text-align:justify;width:30em;"></select>
                         </td>
                         <td style="min-width:30em;text-align:justify">
                             <span asp-validation-for="DoctorID" class="text-danger"></span>
@@ -43,7 +43,7 @@
                             <label style="margin-top:10px">: </label>
                         </td>
                         <td>
-                            <select asp-for="ShiftID" class="form-control" asp-items="ViewBag.ShiftID" style="text-align:center;width:30em;"></select>
+                            <select asp-for="ShiftID" class="form-control" asp-items="ViewBag.ShiftID" style="text-align:justify;width:30em;"></select>
                         </td>
                         <td style="min-width:30em;text-align:justify">
                             <span asp-validation-for="ShiftID" class="text-danger"></span>
