--- a/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Edit.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Edit.cshtml
@@ -32,7 +32,7 @@
                             <label style="margin-top:10px">: </label>
                         </td>
                         <td style="text-align:justify">
-                            <select asp-for="DoctorID" class="form-control" asp-items="ViewBag.DoctorID" style="text-align:center;width:30em;"></select>
+                            <select asp-for="DoctorID" class="form-control" asp-items="ViewBag.DoctorID" style="text-align:justify;width:30em;"></select>
                         </td>
                         <td>
                             <span asp-validation-for="DoctorID" class="text-danger"></span>
@@ -44,7 +44,7 @@
                             <label style="margin-top:10px">: </label>
                         </td>
                         <td style="text-align:justify">
-                            <select asp-for="ShiftID" class="form-control" asp-items="ViewBag.ShiftID" style="text-align:center;width:30em;"></select>
+                            <select asp-for="ShiftID" class="form-control" asp-items="ViewBag.ShiftID" style="text-align:justify;width:30em;"></select>
                         </td>
                         <td>
                             <span asp-validation-for="ShiftID" class="text-danger"></span>
