--- a/HospitalScheduling/HospitalScheduling/Views/HollidayForms/Create.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/HollidayForms/Create.cshtml
@@ -31,7 +31,7 @@
                             <label style="margin-top:10px">: </label>
                         </td>
                         <td>
-                            <input asp-for="DateStart" class="form-control" style="text-align:center;width:30em;" />
+                            <input asp-for="DateStart" class="form-control" style="text-align:justifywidth:30em;" />
                         </td>
                         <td>
                             <span asp-validation-for="DateStart" class="text-danger"></span>
@@ -43,7 +43,7 @@
                             <label style="margin-top:10px">: </label>
                         </td>
                         <td>
-                            <input asp-for="DateEnd" class="form-control" style="text-align:center;width:30em;" />
+                            <input asp-for="DateEnd" class="form-control" style="text-align:justifywidth:30em;" />
                         </td>
                         <td>
                             <span asp-validation-for="DateEnd" class="text-danger"></span>
