--- a/HospitalScheduling/HospitalScheduling/Views/HollidayForms/Delete.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/HollidayForms/Delete.cshtml
@@ -35,7 +35,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="VacationID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <a asp-action="DeleteConfirmation" asp-route-id="@Model.VacationID" class="btn btn-danger">Delete</a>
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
