--- a/HospitalScheduling/HospitalScheduling/Views/Specialities/Edit.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Specialities/Edit.cshtml
@@ -33,21 +33,9 @@
                             <label style="margin-top:10px">: </label>
                         </td>
                         <td style="text-align:justify">
-                            <input asp-for="Name" class="form-control"   style="text-align:center;width:30em;" />
+                            <input asp-for="Name" class="form-control"   style="text-align:justify;width:30em;" />
                         <td>
                             <span asp-validation-for="Name" class="text-danger"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="min-width:8em;text-align:justify">
-                            <label asp-for="RegisterDate" class="control-label"></label>
-                            <label style="margin-top:10px">: </label>
-                        </td>
-                        <td style="text-align:justify">
-                            <input asp-for="RegisterDate" class="form-control"   style="text-align:center;width:30em;" />
-                        </td>
-                        <td>
-                            <span asp-validation-for="RegisterDate" class="text-danger"></span>
                         </td>
                     </tr>
                 </table>
