--- a/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Delete.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Delete.cshtml
@@ -6,6 +6,7 @@
 }
 
 
+<meta http-equiv="Refresh" content="60" />
 <div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
     <div class="overlay"></div>
     <div class="container" style="height:200px">
@@ -24,34 +25,40 @@
         <hr />
         <table>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Doctor.Name): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Doctor.Name)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Doctor.Phone): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Doctor.Phone)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Shift.Name): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Shift.Name)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Shift.StartDate): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Shift.StartDate)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
-                    <b>EndDate: </b>
+                <td style="min-width:8em;text-align:justify">
+                    <b>Shift ends in: </b>
                 </td>
-                <td>@Model.Shift.StartDate.AddHours(Model.Shift.DurationHours).AddMinutes(Model.Shift.DurationMinutes).AddSeconds(Model.Shift.DurationSeconds).ToString()</td>
+                <td>@Model.Shift.ShiftStartHour.AddDays(DateTime.Now.DayOfYear).AddYears(DateTime.Now.Year).AddHours(Model.Shift.DurationHours).AddMinutes(Model.Shift.DurationMinutes).Subtract(DateTime.Now).ToString()</td>
+            </tr>
+            <tr>
+                <td style="min-width:8em;text-align:justify">
+                    <b>@Html.DisplayNameFor(model => model.Shift.EndDate): </b>
+                </td>
+                <td>@Html.DisplayFor(model => model.Shift.EndDate)</td>
             </tr>
         </table>
     </div>
@@ -59,7 +66,7 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="DoctorShiftID" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="DeleteConfirmation" asp-route-id="@Model.DoctorShiftID" class="btn btn-danger">Delete</a>
         <a asp-action="Index" class="btn btn-info">Back to List</a>
     </form>
     <br />
