--- a/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/DoctorShifts/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HospitalScheduling.Models.DoctorShifts>
+﻿@model HospitalScheduling.Models.ViewModels.DoctorShiftsViewModel
 @{
     ViewData["Title"] = "List";
     ViewData["Active"] = "DoctorShifts";
@@ -30,32 +30,36 @@
             }
             catch (Exception ex)
             {
-
+                Console.WriteLine(ex.Message);
             }
             finally
             {
+                if (string.IsNullOrEmpty(search))
+                {
+                    search = ViewData["Search"] as string;
+                }
                 <input type="search" id="searchbox" autofocus oninput="this.form.submit();" onfocus="this.value = '@(search)'" onchange="this.form.submit()" name="search" style="position:absolute;right:0; margin-right:50px; border: 2px solid #167ce9;font-size: 1.2em;text-align: center;border-radius: 20px;background-color:transparent;" />
             }
         }
         <input type="submit" class="icon-search fa-7x" value="&#xf002;" style="font-family: FontAwesome;height:35px;width:35px; position:absolute;right:0;background-color:transparent;margin-right:5px;margin-top:1px; border: 2px solid #167ce9;font-size: 1.2em;text-align: center;border-radius: 20px;" />
     </div>
 </form>
-</br>
+<br />
 <center>
     <table class="table" style="margin-left:15px;max-width:98.5% !important;">
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Doctor.Name)
+                    @Html.DisplayNameFor(model => model.DoctorShifts.FirstOrDefault().Doctor.Name)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Shift.Name)
+                    @Html.DisplayNameFor(model => model.DoctorShifts.FirstOrDefault().Shift.Name)
                 </th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @foreach (var item in Model.DoctorShifts)
             {
                 <tr>
                     <td>
@@ -75,3 +79,57 @@
     </table>
     <br />
 </center>
+<div style="margin-left:30px">
+    @{
+        string searchtext = "";
+        try
+        {
+            searchtext = string.IsNullOrEmpty(Context.Request.Form["search"]) ? string.Empty : Context.Request.Form["search"].ToString();
+
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex.Message);
+        }
+
+        if (string.IsNullOrEmpty(searchtext))
+        {
+            searchtext = ViewData["Search"] as string;
+        }
+
+        @if (Model.Pagination.CurrentPage > 1)
+        {
+            <a href="@Url.Action("Index", "DoctorShifts", new { @page = (Model.Pagination.CurrentPage > 1) ? 1 : Model.Pagination.CurrentPage, @search=searchtext})"><span class="icon-next">&lt;&lt;</span></a>
+            <span>&nbsp;</span>
+            <a href="@Url.Action("Index", "DoctorShifts", new { @page = (Model.Pagination.CurrentPage > 1) ? Model.Pagination.CurrentPage-1 : Model.Pagination.CurrentPage, @search=searchtext })"><span class="icon-next">&lt;</span></a>
+            <span>&nbsp;</span>
+        }
+
+        @for (int i = 1; i <= Model.Pagination.NumberPages; i++)
+        {
+            if (i == Model.Pagination.CurrentPage)
+            {
+                <span>@i.ToString()</span>
+                <span>&nbsp;&nbsp;</span>
+            }
+            else if (i != Model.Pagination.CurrentPage && i <= Model.Pagination.CurrentPage + 1 && i >= Model.Pagination.CurrentPage - 1 && Model.Pagination.CurrentPage != 1)
+            {
+                @Html.ActionLink(i.ToString(), "Index", "DoctorShifts", new { @page = i, @search = searchtext })
+                <span>&nbsp;</span>
+            }
+            else if (Model.Pagination.CurrentPage == 1 || Model.Pagination.CurrentPage == Model.Pagination.NumberPages)
+            {
+                @Html.ActionLink(i.ToString(), "Index", "DoctorShifts", new { @page = i, @search = searchtext })
+                <span>&nbsp;</span>
+            }
+        }
+
+        @if (Model.Pagination.CurrentPage < Model.Pagination.NumberPages)
+        {
+            <a href="@Url.Action("Index", "DoctorShifts", new { @page = (Model.Pagination.CurrentPage < Model.Pagination.NumberPages) ? Model.Pagination.CurrentPage + 1 : Model.Pagination.CurrentPage , @search=searchtext})"><span class="icon-prev">&gt;</span></a>
+            <span>&nbsp;&nbsp;</span>
+            <a href="@Url.Action("Index", "DoctorShifts", new { @page = (Model.Pagination.CurrentPage < Model.Pagination.NumberPages) ? Model.Pagination.NumberPages : Model.Pagination.CurrentPage , @search=searchtext})"><span class="icon-prev">&gt;&gt;</span></a>
+            <span>&nbsp;&nbsp;</span>
+        }
+    }
+</div>
