--- a/HospitalScheduling/HospitalScheduling/Views/Doctors/Create.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Doctors/Create.cshtml
@@ -27,64 +27,76 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <table class="table-borderless">
                         <tr>
-                            <td style="min-width:5em;text-align:justify">
+                            <td style="min-width:8em;text-align:justify">
                                 <label asp-for="Name" class="control-label" style="margin-top:10px">
                                 </label>
                                 <label style="margin-top:10px">: </label>
                             </td>
                             <td>
-                                <input asp-for="Name" class="form-control" placeholder="Insert a name" style="text-align:center;width:30em;" />
+                                <input asp-for="Name" class="form-control" placeholder="Insert a name" style="text-align:justify;width:30em;" />
                             </td>
                             <td>
                                 <span asp-validation-for="Name" class="text-danger"></span>
                             </td>
                         </tr>
                         <tr>
-                            <td style="min-width:5em;text-align:justify">
+                            <td style="min-width:8em;text-align:justify">
                                 <label asp-for="Email" class="control-label" style="margin-top:10px">
                                 </label><label style="margin-top:10px">: </label>
                             </td>
                             <td>
-                                <input asp-for="Email" class="form-control" placeholder="Insert an email" style="text-align:center" />
+                                <input asp-for="Email" class="form-control" placeholder="Insert an email" style="text-align:justify" />
                             </td>
                             <td>
                                 <span asp-validation-for="Email" class="text-danger"></span>
                             </td>
                         </tr>
                         <tr>
-                            <td style="min-width:5em;text-align:justify">
+                            <td style="min-width:8em;text-align:justify">
                                 <label asp-for="Phone" class="control-label" style="margin-top:10px">
                                 </label><label style="margin-top:10px">: </label>
                             </td>
                             <td>
-                                <input asp-for="Phone" class="form-control" placeholder="Insert a phone number" style="text-align:center" />
+                                <input asp-for="Phone" class="form-control" placeholder="Insert a phone number" style="text-align:justify" />
                             </td>
                             <td>
                                 <span asp-validation-for="Phone" class="text-danger"></span>
                             </td>
                         </tr>
                         <tr>
-                            <td style="min-width:5em;text-align:justify">
+                            <td style="min-width:8em;text-align:justify">
                                 <label asp-for="Birthday" class="control-label" style="margin-top:10px">
                                 </label><label style="margin-top:10px">: </label>
                             </td>
                             <td>
-                                <input asp-for="Birthday" class="form-control" placeholder="Insert a birth date" style="text-align:center" />
+                                <input asp-for="Birthday" class="form-control" placeholder="Insert a birth date" style="text-align:justify" />
                             </td>
                             <td>
                                 <span asp-validation-for="Birthday" class="text-danger"></span>
                             </td>
                         </tr>
                         <tr>
-                            <td style="min-width:5em;text-align:justify">
+                            <td style="min-width:8em;text-align:justify">
                                 <label asp-for="Address" class="control-label" style="margin-top:10px">
                                 </label><label style="margin-top:10px">: </label>
                             </td>
                             <td>
-                                <input asp-for="Address" class="form-control" placeholder="Insert an address" style="text-align:center;" />
+                                <input asp-for="Address" class="form-control" placeholder="Insert an address" style="text-align:justify;" />
                             </td>
                             <td>
                                 <span asp-validation-for="Address" class="text-danger"></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="min-width:8em;text-align:justify">
+                                <label asp-for="Speciality" class="control-label" style="margin-top:10px">
+                                </label><label style="margin-top:10px">: </label>
+                            </td>
+                            <td>
+                                <select asp-for="SpecialityID" asp-items="ViewBag.Speciality" class="form-control" placeholder="Insert a speciality" style="text-align:justify;"></select>
+                            </td>
+                            <td>
+                                <span asp-validation-for="SpecialityID" class="text-danger"></span>
                             </td>
                         </tr>
                     </table>
