--- a/HospitalScheduling/HospitalScheduling/Views/Doctors/Delete.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Doctors/Delete.cshtml
@@ -24,44 +24,50 @@
         <hr />
         <table>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Name): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Name)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Email): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Email)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Phone): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Phone)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Birthday): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Birthday)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Address): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Address)</td>
+            </tr>
+            <tr>
+                <td style="min-width:8em;text-align:justify">
+                    <b>@Html.DisplayNameFor(model => model.Speciality): </b>
+                </td>
+                <td>@Html.DisplayFor(model => model.Speciality.Name)</td>
             </tr>
         </table>
     </div>
     <br />
 
 
-    <form asp-action="Delete">
+    <form>
         <input type="hidden" asp-for="DoctorID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> 
-        <a asp-action="Index" class="btn btn-info" >Back to List</a>
+        <a asp-action="DeleteConfirmation" asp-route-id="@Model.DoctorID" class="btn btn-danger">Delete</a>
+        <a asp-action="Index" class="btn btn-info">Back to List</a>
     </form>
     <br />
 </center>
