--- a/HospitalScheduling/HospitalScheduling/Views/Doctors/Details.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Doctors/Details.cshtml
@@ -21,34 +21,40 @@
     <div>
         <table>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Name): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Name)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Email): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Email)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Phone): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Phone)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Birthday): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Birthday)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Address): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Address)</td>
+            </tr>
+            <tr>
+                <td style="min-width:8em;text-align:justify">
+                    <b>@Html.DisplayNameFor(model => model.Speciality): </b>
+                </td>
+                <td>@Html.DisplayFor(model => model.Speciality.Name)</td>
             </tr>
         </table>
     </div>
