--- a/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
@@ -52,43 +52,43 @@
             </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-xl-auto">
-                    <li @{ if ((ViewData["Active"] == "Home")) { @: class="nav-item active"
+                    <li @{ if (ViewData["Active"].Equals("Home")) { @: class="nav-item active"
                         } else { @: class="nav-item"
                         }}>
                         <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
                     </li>
 
-                    <li @{ if ((ViewData["Active"] == "Doctors")) { @: class="nav-item active"
+                    <li @{ if (ViewData["Active"].Equals("Doctors")) { @: class="nav-item active"
                         } else { @: class="nav-item"
                         }}>
                         <a asp-area="" asp-controller="Doctors" asp-action="Index" class="nav-link">Doctors</a>
                     </li>
 
-                    <li @{ if ((ViewData["Active"] == "Nurses")) { @: class="nav-item active"
+                    <li @{ if (ViewData["Active"].Equals("Nurses")) { @: class="nav-item active"
                         } else { @: class="nav-item"
                         }}>
                         <a asp-area="" asp-controller="Nurses" asp-action="Index" class="nav-link">Nurses</a>
                     </li>
 
-                    <li @{ if ((ViewData["Active"] == "Specialities")) { @: class="nav-item active"
+                    <li @{ if (ViewData["Active"].Equals("Specialities")) { @: class="nav-item active"
                         } else { @: class="nav-item"
                         }}>
                         <a asp-area="" asp-controller="Specialities" asp-action="Index" class="nav-link">Specialities</a>
                     </li>
 
-                    <li @{ if ((ViewData["Active"] == "Shifts")) { @: class="nav-item active"
+                    <li @{ if (ViewData["Active"].Equals("Shifts")) { @: class="nav-item active"
                         } else { @: class="nav-item"
                         }}>
                         <a asp-area="" asp-controller="Shifts" asp-action="Index" class="nav-link">Shifts</a>
                     </li>
 
-                    <li @{ if ((ViewData["Active"] == "DoctorShifts")) { @: class="nav-item active"
+                    <li @{ if (ViewData["Active"].Equals("DoctorShifts")) { @: class="nav-item active"
                         } else { @: class="nav-item"
                         }}>
                         <a asp-area="" asp-controller="DoctorShifts" asp-action="Index" class="nav-link">Assigned Shifts</a>
                     </li>
 
-                    <li @{ if ((ViewData["Active"] == "HolidayForms")) { @: class="nav-item active"
+                    <li @{ if (ViewData["Active"].Equals("HolidayForms")) { @: class="nav-item active"
                         } else { @: class="nav-item"
                         }}>
                         <a asp-area="" asp-controller="HollidayForms" asp-action="Index" class="nav-link">Holiday Form</a>
