--- a/HospitalScheduling/HospitalScheduling/Views/Shifts/Create.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shifts/Create.cshtml
@@ -32,7 +32,7 @@
                             <label style="margin-top:10px">: </label>
                         </td>
                         <td>
-                            <input asp-for="Name" class="form-control" style="text-align:center;width:30em;" />
+                            <input asp-for="Name" class="form-control" style="text-align:justify;width:30em;" />
                         </td>
                         <td style="min-width:30em;text-align:justify">
                             <span asp-validation-for="Name" class="text-danger"></span>
@@ -44,10 +44,22 @@
                             </label><label style="margin-top:10px">: </label>
                         </td>
                         <td>
-                            <input asp-for="StartDate" class="form-control" style="text-align:center" />
+                            <input asp-for="StartDate" class="form-control" style="text-align:justify" />
                         </td>
                         <td style="min-width:30em;text-align:justify">
                             <span asp-validation-for="StartDate" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:8em;text-align:justify">
+                            <label asp-for="ShiftStartHour" class="control-label" style="margin-top:10px">
+                            </label><label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="ShiftStartHour" class="form-control" style="text-align:justify" />
+                        </td>
+                        <td style="min-width:30em;text-align:justify">
+                            <span asp-validation-for="ShiftStartHour" class="text-danger"></span>
                         </td>
                     </tr>
                     <tr>
@@ -56,7 +68,7 @@
                             </label><label style="margin-top:10px">: </label>
                         </td>
                         <td>
-                            <input asp-for="DurationHours" class="form-control" style="text-align:center" />
+                            <input asp-for="DurationHours" class="form-control" style="text-align:justify" />
                         </td>
                         <td style="min-width:30em;text-align:justify">
                             <span asp-validation-for="DurationHours" class="text-danger"></span>
@@ -68,7 +80,7 @@
                             </label><label style="margin-top:10px">: </label>
                         </td>
                         <td>
-                            <input asp-for="DurationMinutes" class="form-control" style="text-align:center" />
+                            <input asp-for="DurationMinutes" class="form-control" style="text-align:justify" />
                         </td>
                         <td style="min-width:30em;text-align:justify">
                             <span asp-validation-for="DurationMinutes" class="text-danger"></span>
@@ -76,14 +88,14 @@
                     </tr>
                     <tr>
                         <td style="min-width:8em;text-align:justify">
-                            <label asp-for="DurationSeconds" class="control-label" style="margin-top:10px">
+                            <label asp-for="EndDate" class="control-label" style="margin-top:10px">
                             </label><label style="margin-top:10px">: </label>
                         </td>
                         <td>
-                            <input asp-for="DurationSeconds" class="form-control" style="text-align:center" />
+                            <input asp-for="EndDate" class="form-control" style="text-align:justify" />
                         </td>
                         <td style="min-width:30em;text-align:justify">
-                            <span asp-validation-for="DurationSeconds" class="text-danger"></span>
+                            <span asp-validation-for="EndDate" class="text-danger"></span>
                         </td>
                     </tr>
                 </table>
