--- a/HospitalScheduling/HospitalScheduling/Views/Shifts/Details.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shifts/Details.cshtml
@@ -21,22 +21,28 @@
     <div>
         <table>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.Name): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.Name)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
                     <b>@Html.DisplayNameFor(model => model.StartDate): </b>
                 </td>
                 <td>@Html.DisplayFor(model => model.StartDate)</td>
             </tr>
             <tr>
-                <td style="min-width:5em;text-align:justify">
+                <td style="min-width:8em;text-align:justify">
+                    <b>Turn ends in: </b>
+                </td>
+                <td>@Model.ShiftStartHour.AddDays(DateTime.Now.DayOfYear - 1).AddYears(DateTime.Now.Year- 1).AddHours(Model.DurationHours).AddMinutes(Model.DurationMinutes).Subtract(DateTime.Now).ToString() </td>
+            </tr>
+            <tr>
+                <td style="min-width:8em;text-align:justify">
                     <b>EndDate: </b>
                 </td>
-                <td>@Model.StartDate.AddHours(Model.DurationHours).AddMinutes(Model.DurationMinutes).AddSeconds(Model.DurationSeconds).ToString()</td>
+                <td>@Model.EndDate.ToString()</td>
             </tr>
         </table>
     </div>
