--- a/HospitalScheduling/HospitalScheduling/Views/Shifts/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shifts/Index.cshtml
@@ -1,10 +1,11 @@
-﻿@model IEnumerable<HospitalScheduling.Models.Shift>
+﻿@model HospitalScheduling.Models.ViewModels.ShiftsViewModel
 
 @{
     ViewData["Title"] = "List";
     ViewData["Active"] = "Shifts";
 }
 
+<meta http-equiv="Refresh" content="60" />
 <div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
     <div class="overlay"></div>
     <div class="container" style="height:200px">
@@ -30,10 +31,14 @@
             }
             catch (Exception ex)
             {
-
+                Console.WriteLine(ex.Message);
             }
             finally
             {
+                if (string.IsNullOrEmpty(search))
+                {
+                    search = ViewData["Search"] as string;
+                }
 
                 <input type="search" id="searchbox" autofocus oninput="this.form.submit();" onfocus="this.value = '@(search)'" onchange="this.form.submit()" name="search" style="position:absolute;right:0; margin-right:50px; border: 2px solid #167ce9;font-size: 1.2em;text-align: center;border-radius: 20px;background-color:transparent;" />
             }
@@ -47,22 +52,22 @@
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Name)
+                    @Html.DisplayNameFor(model => model.Shifts.FirstOrDefault().Name)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.StartDate)
+                    @Html.DisplayNameFor(model => model.Shifts.FirstOrDefault().StartDate)
                 </th>
                 <th>
                     Time Left
                 </th>
                 <th>
-                    End Date
+                    @Html.DisplayNameFor(model => model.Shifts.FirstOrDefault().EndDate)
                 </th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @foreach (var item in Model.Shifts)
             {
                 <tr>
                     <td>
@@ -72,15 +77,14 @@
                         @Html.DisplayFor(modelItem => item.StartDate)
                     </td>
                     <td>
-                        <meta http-equiv="Refresh" content="60" />
                         @{
-                            var milis = item.StartDate.AddHours(item.DurationHours).AddMinutes(item.DurationMinutes).AddSeconds(item.DurationSeconds).Subtract(DateTime.Now);
+                            var milis = item.ShiftStartHour.AddDays(DateTime.Now.DayOfYear - 1).AddYears(DateTime.Now.Year - 1).AddHours(item.DurationHours).AddMinutes(item.DurationMinutes).Subtract(DateTime.Now);
                             var date = (milis.Ticks < 0) ? new DateTime() : new DateTime(milis.Ticks);
                             @date.ToLongTimeString()
                         }
                     </td>
                     <td>
-                        @(new DateTime(item.StartDate.AddHours(item.DurationHours).AddMinutes(item.DurationMinutes).AddSeconds(item.DurationSeconds).Ticks).ToString())
+                        @Html.DisplayFor(modelItem => item.EndDate)
                     </td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.ShiftID">Edit</a> |
@@ -93,3 +97,57 @@
     </table>
     <br />
 </center>
+<div style="margin-left:30px">
+    @{
+        string searchtext = "";
+        try
+        {
+            searchtext = string.IsNullOrEmpty(Context.Request.Form["search"]) ? string.Empty : Context.Request.Form["search"].ToString();
+
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex.Message);
+        }
+
+        if (string.IsNullOrEmpty(searchtext))
+        {
+            searchtext = ViewData["Search"] as string;
+        }
+
+        @if (Model.Pagination.CurrentPage > 1)
+        {
+            <a href="@Url.Action("Index", "Shifts", new { @page = (Model.Pagination.CurrentPage > 1) ? 1 : Model.Pagination.CurrentPage, @search=searchtext})"><span class="icon-next">&lt;&lt;</span></a>
+            <span>&nbsp;</span>
+            <a href="@Url.Action("Index", "Shifts", new { @page = (Model.Pagination.CurrentPage > 1) ? Model.Pagination.CurrentPage-1 : Model.Pagination.CurrentPage, @search=searchtext })"><span class="icon-next">&lt;</span></a>
+            <span>&nbsp;</span>
+        }
+
+        @for (int i = 1; i <= Model.Pagination.NumberPages; i++)
+        {
+            if (i == Model.Pagination.CurrentPage)
+            {
+                <span>@i.ToString()</span>
+                <span>&nbsp;&nbsp;</span>
+            }
+            else if (i != Model.Pagination.CurrentPage && i <= Model.Pagination.CurrentPage + 1 && i >= Model.Pagination.CurrentPage - 1 && Model.Pagination.CurrentPage != 1)
+            {
+                @Html.ActionLink(i.ToString(), "Index", "Shifts", new { @page = i, @search = searchtext })
+                <span>&nbsp;</span>
+            }
+            else if (Model.Pagination.CurrentPage == 1 || Model.Pagination.CurrentPage == Model.Pagination.NumberPages)
+            {
+                @Html.ActionLink(i.ToString(), "Index", "Shifts", new { @page = i, @search = searchtext })
+                <span>&nbsp;</span>
+            }
+        }
+
+        @if (Model.Pagination.CurrentPage < Model.Pagination.NumberPages)
+        {
+            <a href="@Url.Action("Index", "Shifts", new { @page = (Model.Pagination.CurrentPage < Model.Pagination.NumberPages) ? Model.Pagination.CurrentPage + 1 : Model.Pagination.CurrentPage , @search=searchtext})"><span class="icon-prev">&gt;</span></a>
+            <span>&nbsp;&nbsp;</span>
+            <a href="@Url.Action("Index", "Shifts", new { @page = (Model.Pagination.CurrentPage < Model.Pagination.NumberPages) ? Model.Pagination.NumberPages : Model.Pagination.CurrentPage , @search=searchtext})"><span class="icon-prev">&gt;&gt;</span></a>
+            <span>&nbsp;&nbsp;</span>
+        }
+    }
+</div>
