--- a/HospitalScheduling/HospitalScheduling/Views/_ViewImports.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using HospitalScheduling
 @using HospitalScheduling.Models
+@using HospitalScheduling.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
